# UI_maker

./: .gitignore  Dockerfile  any.html  pyproject.toml  requirements.txt  try.py
backend/: auto_script.py  main.py  settings.py  test_limit.py
backend/agent/: feature_extraction_agent.py  feature_planning_agent.py  file_validator.py  fix_agent.py  generation_agent.py  loop_workflow.py  patch_agent.py  patch_apply_agent.py  patch_planning_agent.py  prompt_engineering_agent.py  registry.py  schema.py  state.py  system_context_builder.py
backend/test/: context_builder_test.py  feature_extraction_test.py  indexer_test.py  patch_agent_test.py  prompt_eng_test.py  state_test.py  test_fix_integration.py  test_generate_only.py  test_theme_propagation.py  try.py
backend/themes/: themes.py
backend/utils/: code_search.py  file_validator.py  file_writer.py  folder_zipper.py  json_fix_prompt_builder.py  llm_client.py  load_response.py  symbol_extractor.py  system_context_builder.py  user_feedback.py
backend/vectorstore/: code_indexer.py
backend/workflow/: loop_workflow.py  state.py  user_feedback_workflow.py
backend/workflow/angular_base_template/: package-lock.json  package.json  tailwind.config.js
chroma_code_index/: chroma.sqlite3
frontend/: download.html  index.html
generated_output/: package-lock.json
generated_output/src/app/: app.component.ts  forgot-password.page.ts  (+2 more)
saved_pages/: forgot-password.html  login-screen.html  register-account.html  resume-editor.html
src/app/: README.md  angular.json  package.json  password-recovery.page.ts
(+1 files in other folders)
